--- a/redThon/templates/game.html
+++ b/redThon/templates/game.html
@@ -8,8 +8,8 @@
     <script defer src="https://pyscript.net/latest/pyscript.js"></script>
     <style>
         .flip { 
-            width: 24.43%;
-            height: 200px;
+            width: 200px;
+            height: 275px;
             position: relative;
             perspective: 1100px;
             float:left;
@@ -36,18 +36,23 @@
           }
 
           .front {
-            background: tomato; 
+            background-image: url('../static/img/cardGame.png');
+            background-size: cover; 
+            background-repeat: no-repeat;
+            background-position: center;
           }
 
           .back { 
-            background: royalblue; 
+            background-image: url('../static/img/cardGame.png');
+            background-size: cover; 
+            background-repeat: no-repeat;
             transform: rotateY(180deg);
           }
 
           .card_lobby {
             position:fixed;
-            width:100%;
-            height:100%;
+            width:1000px;
+            height:1200px;
             background:green;
             text-align:center;
             color:white;
@@ -58,7 +63,6 @@
             font-weight:bold;
             margin:30px;
           }
-
     </style>
 </head>
 <body>
@@ -77,7 +81,7 @@
         <div class="card_lobby_skip"><button>건너뛰기</button></div>
     </div>
     <!-- 카드게임 -->
-    <div class="card_main" style="display:none;">
+    <div class="card_main" style="display:none;width:1000px;height:1200px;">
         <div class="flip 1">  
             <div class="card 1">
                 <!-- 앞면 -->
@@ -237,6 +241,7 @@
                 if(game_status) {
                     total_click++;
                     if(click_count == 0) {
+                        alert("1");
                         $(this).css("transform", "");
                         click_element.push($(this));
                         click_count = 1;
@@ -258,8 +263,10 @@
                 if(click_element[0].attr('class').split(" ")[1] == click_element[1].attr('class').split(" ")[1]) {
                     //정답 카운트
                     success_num++;
-                    click_element[0].children(".front").css("background", "green");
-                    click_element[1].children(".front").css("background", "green");
+                    click_element[0].children(".front").css("background-image", "url('../static/img/success_img"+success_num+".png')");
+                    click_element[1].children(".front").css("background-image", "url('../static/img/success_img"+success_num+".png')");
+                    //click_element[0].children(".front").css("background", "green");
+                    //click_element[1].children(".front").css("background", "green");
 
                     if(success_num == 8) {
                         alert("게임 클리어!\n총 클릭 횟수:"+total_click);
